# auto_project

./: README.md  pyproject.toml  run_pipeline.py
gl_autotool/pages/: base_page.py  basic_page.py  main_page.py
gl_autotool/tests/: base_test.py  conftest.py  page_launch.py  test_page_launch.py
